Negative spacing fix

--- a/src/components/MenuItem/MenuItem.scss
+++ b/src/components/MenuItem/MenuItem.scss
@@ -8,7 +8,7 @@
     text-transform: uppercase;
 
     &__dropdown {
-        left: spacer(negative-m);
+        left: -spacer(small-xl);
         opacity: 0;
         padding-top: spacer(small-l);
         position: absolute;
