--- a/src/styles/res/spacing.scss
+++ b/src/styles/res/spacing.scss
@@ -1,5 +1,4 @@
 $spacers-map: (
-    negative-m: -20px,
     small-xxs: 3px,
     small-xs: 5px,
     small-s: 8px,
